# raw_server

./: Cargo.toml  README.md  learned.md
.sqlx/: query-5e56f44e8e77d0c55be5b92da2f8a6a49e6f8781a76193e3564856c70410929b.json  query-93c2c7471436f91cb08946ace54b893aa68c0020fd2e7552379594082d8cb09f.json  query-a13d2aef5cbd3427fa89552526a6825034afb7a9f09eb85d51cb6f6eeeefd186.json  query-a6fad3ca3cea543d602224a7ac53bb423606137af0ad2a9f105bf1f7245223a3.json
migrations/: 20260601111129_create_users.sql
src/: main.rs
