[package]
name = "raw_server"
version = "0.1.0"
edition = "2024"
default-run = "raw_server"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.8.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "macros"] }
chrono = { version = "0.4", features = ["serde"] }